Basic functionality implemented

--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,19 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>assets/img/favicon/cropped-UKRN-Logo-150-32x32.png" sizes="32x32" />
-    <link rel="icon" href="<%= BASE_URL %>assets/img/favicon/cropped-UKRN-Logo-150-192x192.png" sizes="192x192" />
-    <link rel="apple-touch-icon" href="<%= BASE_URL %>assets/img/favicon/cropped-UKRN-Logo-150-180x180.png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@5.8.55/css/materialdesignicons.min.css">
-    <title>UKRN Open Research Resources Browser</title>
-    <style type="text/css">
-        #ukrn {
-            display: flex;
-            flex-wrap: wrap;
-            align-items: center;
-            justify-content: space-evenly;
-            padding: .5em 0;
-            text-align: center;
-            box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
-        }
-        #ukrn img {height: 4em;}
-        #ukrn > h1 {font-weight: bold; font-size: 2em;}
-    </style>
+    <title>West Oxford Dads' Volleyball</title>
   </head>
   <body>
-    <header id="ukrn">
-        <img src="<%= BASE_URL %>assets/img/UKRN-Logo-150.png" alt="UKRN Logo"/>
-        <h1>Open Research Resource Browser</h1>
+    <header style="margin: auto; text-align: center">
+      <h1>West Oxford Dads' Volleyball Signups</h1>
+      <p class="subtitle" style="font-size: .8em;">
+        Join any one future session at a time. Please only enter your own name unless you have permission to move others.
+      </p>
     </header>
     <noscript>
-      <strong>We're sorry but the UKRN Open Research Resources Browser doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but this website doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
